[gd_scene load_steps=15 format=3 uid="uid://ck3eq2281m4ii"]

[ext_resource type="Script" uid="uid://8q21rgjwydvc" path="res://Scripts/dialogue-system-main.gd" id="1_p5dyo"]
[ext_resource type="Resource" uid="uid://chasd5eawtj5h" path="res://Data/actor-data.tres" id="2_s6bd2"]
[ext_resource type="Script" uid="uid://cyps1fn26jpa" path="res://Scripts/actor-popup.gd" id="2_sugue"]
[ext_resource type="StyleBox" uid="uid://cnuqnohebilqf" path="res://menu-style-box.tres" id="3_y7jgi"]
[ext_resource type="StyleBox" uid="uid://8dw03d06sg13" path="res://menu-button-style-box-hover.tres" id="4_1egwd"]
[ext_resource type="StyleBox" uid="uid://cp51kuacdsq6p" path="res://menu-button-style-box.tres" id="4_uoqss"]
[ext_resource type="StyleBox" uid="uid://dx5knmannxcie" path="res://Style-box/Graph-board-style/graph-board-style-box.tres" id="4_y7jgi"]
[ext_resource type="StyleBox" uid="uid://dg6clgi3suh66" path="res://actor-popup-stylebox.tres" id="4_y376d"]
[ext_resource type="PackedScene" uid="uid://b0nae3jyi1yqk" path="res://Prefabs/start_node.tscn" id="5_6fuu3"]
[ext_resource type="StyleBox" uid="uid://c5kow2k4u4tux" path="res://Close-button-style.tres" id="5_b4x63"]
[ext_resource type="StyleBox" uid="uid://uoh3fnmhfnsv" path="res://close-button-style-hover.tres" id="5_hk8mb"]
[ext_resource type="Script" uid="uid://bjcc8x66vcx6s" path="res://Scripts/import_module.gd" id="11_a3dro"]
[ext_resource type="Script" uid="uid://dsravrywrla57" path="res://Scripts/export-module.gd" id="11_t8hxd"]
[ext_resource type="Script" uid="uid://n756534e8q02" path="res://Scripts/right_click_menu.gd" id="13_gjrog"]

[node name="Main" type="Control" node_paths=PackedStringArray("actor_popup")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_p5dyo")
actor_popup = NodePath("Actor-control")
actor_data = ExtResource("2_s6bd2")

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/menu_panel = ExtResource("3_y7jgi")
theme_override_styles/panel = ExtResource("4_y7jgi")
right_disconnects = true
minimap_enabled = false

[node name="Start-node" parent="GraphEdit" instance=ExtResource("5_6fuu3")]
layout_mode = 1
offset_left = -440.0
offset_top = -52.0
offset_right = -348.0
offset_bottom = 26.0
mouse_filter = 1
position_offset = Vector2(136, 256)

[node name="ActorButton" type="Button" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 32.0
theme_override_styles/hover = ExtResource("4_1egwd")
theme_override_styles/normal = ExtResource("4_uoqss")
text = "Actor"

[node name="ImportButton" type="Button" parent="."]
layout_mode = 0
offset_left = 848.0
offset_right = 998.0
offset_bottom = 32.0
text = "Import"

[node name="Actor-control" type="Control" parent="." node_paths=PackedStringArray("input_box", "add_button")]
layout_mode = 3
anchors_preset = 0
offset_left = 451.0
offset_top = 103.0
offset_right = 691.0
offset_bottom = 103.0
script = ExtResource("2_sugue")
input_box = NodePath("ActorPopup/Label/Actor-name-input")
add_button = NodePath("ActorPopup/Label/Add-Actor-Button")

[node name="ActorPopup" type="Panel" parent="Actor-control"]
layout_mode = 0
offset_right = 245.0
offset_bottom = 100.0
theme_override_styles/panel = ExtResource("4_y376d")

[node name="CloseButton" type="Button" parent="Actor-control/ActorPopup"]
layout_mode = 0
offset_left = 213.0
offset_top = -7.0
offset_right = 245.0
offset_bottom = 25.0
theme_override_styles/hover = ExtResource("5_hk8mb")
theme_override_styles/normal = ExtResource("5_b4x63")
text = "X"

[node name="Label" type="Label" parent="Actor-control/ActorPopup"]
layout_mode = 0
offset_left = 16.0
offset_top = 43.0
offset_right = 67.0
offset_bottom = 66.0
text = "Name:"

[node name="Actor-name-input" type="LineEdit" parent="Actor-control/ActorPopup/Label"]
layout_mode = 0
offset_left = 55.0
offset_top = -2.0
offset_right = 175.0
offset_bottom = 29.0

[node name="Add-Actor-Button" type="Button" parent="Actor-control/ActorPopup/Label"]
layout_mode = 1
offset_left = 189.0
offset_top = -2.0
offset_right = 219.0
offset_bottom = 29.0
text = "+"

[node name="PanelContainer" type="PanelContainer" parent="Actor-control"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 0
offset_left = 1.0
offset_top = 107.5
offset_right = 246.0
offset_bottom = 142.5

[node name="Actor-name-container" type="VBoxContainer" parent="Actor-control/PanelContainer"]
layout_mode = 2

[node name="ImportFileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="ExportAcceptDialog" type="AcceptDialog" parent="."]
title = "Export Dialog"
position = Vector2i(426, 249)
size = Vector2i(300, 150)
content_scale_mode = 1
content_scale_aspect = 1

[node name="Label" type="Label" parent="ExportAcceptDialog"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -67.0
offset_right = 142.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "The dialogue has been saved to"
horizontal_alignment = 1

[node name="ExportFileDialog" type="FileDialog" parent="."]
position = Vector2i(256, 144)
access = 2
filters = PackedStringArray("*.json")

[node name="ExportButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_bottom = 32.0
grow_horizontal = 0
text = "Export"

[node name="Import-module" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_a3dro")

[node name="Export-module" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_t8hxd")

[node name="Righ-click-menu" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 384.0
offset_right = 562.0
offset_bottom = 450.0
script = ExtResource("13_gjrog")

[node name="Control" type="VBoxContainer" parent="Righ-click-menu"]
layout_mode = 2

[node name="dialogue-node-button" type="Button" parent="Righ-click-menu/Control"]
layout_mode = 2
action_mode = 0
text = "Create dialogue node"

[node name="choice-node-button" type="Button" parent="Righ-click-menu/Control"]
layout_mode = 2
action_mode = 0
text = "Create choice node"

[connection signal="pressed" from="ActorButton" to="." method="_on_actor_button_pressed"]
[connection signal="pressed" from="ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="pressed" from="Actor-control/ActorPopup/CloseButton" to="Actor-control" method="_on_close_button_pressed"]
[connection signal="pressed" from="ExportButton" to="." method="_on_export_button_pressed"]
